--- a/feature-tag/package.json
+++ b/feature-tag/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@octokit/rest": "^16.16.3",
+    "dateformat": "^3.0.3",
     "query-string": "^6.2.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
