--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ script:
   - npm run build
 deploy:
   provider: pages
+  local-dir: build
   skip-cleanup: true
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep-history: true
