--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "query-string": "^6.2.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-hashchange": "^0.1.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.5"
   },
