Simple burndown chart with basic delivery rate prediction

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "homepage": "http://lampholder.github.io/feature-dashboard",
   "dependencies": {
     "@octokit/rest": "^16.16.3",
+    "chart.js": "^2.8.0",
     "dateformat": "^3.0.3",
     "query-string": "^6.2.0",
     "react": "^16.8.3",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.3",
     "react-hashchange": "^0.1.0",
     "react-router-dom": "^5.0.0",
