--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "http://lampholder.github.io/feature-dashboard",
   "dependencies": {
+    "@octokit/graphql": "^2.1.1",
     "@octokit/rest": "^16.16.3",
     "chart.js": "^2.8.0",
     "dateformat": "^3.0.3",
