--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "feature-dashboard",
   "version": "0.1.0",
+  "license": "Apache-2.0",
   "private": true,
   "homepage": "https://vector-im.github.io/feature-dashboard",
   "dependencies": {
