Include functional config in the repo (still exclude secrets)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "2"
 services:
     auth:
         image: lampholder/github-auth:v0.1.0
-        env_file: auth.env
+        env_file:
+            - config.env
+            - secrets.env
         ports:
             - "5000"
     dashboard:
