Actually understand how .env files are formatted

--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
-GITHUB_LOGIN_COOKIE=github_login # defaults to github_login
-GITHUB_TOKEN_COOKIE=github_token # defaults to github_token
+GITHUB_LOGIN_COOKIE=github_login
+GITHUB_TOKEN_COOKIE=github_token
 SCOPES=repo
-PATH_LOGIN="/login" # defaults to /login
-PATH_CALLBACK="/callback" # defaults to /callback
-HOST="0.0.0.0" # defaults to 0.0.0.0
-PORT=5000 # defaults to 5000
-OAUTHLIB_INSECURE_TRANSPORT=0 # Set to 1 if you're testing locally and don't have SSL set up
+PATH_LOGIN=/login
+PATH_CALLBACK=/callback
+HOST=0.0.0.0
+PORT=5000
+OAUTHLIB_INSECURE_TRANSPORT=1
