Give the service a less cryptic name in nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ http {
 
     keepalive_timeout  65;
 
-    upstream app {
+    upstream github_auth {
         server auth:5000;
     }
 
@@ -41,7 +41,7 @@ http {
         }
 
         location /_auth/ {
-            proxy_pass http://app/;
+            proxy_pass http://github_auth/;
         }
 
         # Handle noisy favicon.ico messages
