--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@octokit/rest": "^16.16.3",
     "chart.js": "^2.8.0",
     "dateformat": "^3.0.3",
+    "moment": "^2.24.0",
     "query-string": "^6.2.0",
     "react": "^16.8.3",
     "react-chartjs-2": "^2.7.6",
