--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@octokit/graphql": "^2.1.1",
     "@octokit/rest": "^16.16.3",
     "chart.js": "^2.8.0",
+    "classnames": "^2.2.6",
     "dateformat": "^3.0.3",
     "moment": "^2.24.0",
     "query-string": "^6.2.0",
